Barra de navegação funciondando

--- a/Pages/Comentarios/index.html
+++ b/Pages/Comentarios/index.html
@@ -12,7 +12,7 @@
 
     <nav>
         <ul>
-            <li>Início</li>
+            <a href="../TelaIncial/index.html"> <li>Início</li> </a>
             <li>Fórum</li>
             <li>Informações</li>
         </ul>
