--- a/Pages/TelaIncial/index.html
+++ b/Pages/TelaIncial/index.html
@@ -12,7 +12,7 @@
     <nav>
         <ul>
             <li>Início</li>
-            <li>Fórum</li>
+            <a href="../Comentarios/index.html"> <li>Fórum</li> </a>
             <li>Informações</li>
         </ul>
 
