--- a/Pages/Comentarios/index.html
+++ b/Pages/Comentarios/index.html
@@ -154,7 +154,7 @@
 
         </div>
 
-        <button type="submit">Comentar</button>
+        <a href="../TelaComentar/index.html"><button type="submit">Comentar</button></a>
     </main>
 
 
