--- a/Pages/TelaADM/index.html
+++ b/Pages/TelaADM/index.html
@@ -12,7 +12,9 @@
 
     <nav>
         <ul>
-            <a href="../TelaIncial/index.html"> <li>Início</li> </a>
+            <a href="../TelaIncial/index.html">
+                <li>Início</li>
+            </a>
             <li>Fórum</li>
             <li>Informações</li>
         </ul>
@@ -41,7 +43,7 @@
                         blanditiis expedita molestiae.
                     </p>
                     <div class="btn-responder">
-                        <button type="submit">
+                        <button onclick="abrirModal()" type="submit">
                             Excluir
                         </button>
                     </div>
@@ -62,15 +64,23 @@
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi voluptatem harum dolorem sit
                         ut reprehenderit non dolore voluptate hic ex quisquam nisi quis, id consectetur incidunt quos
                         blanditiis expedita molestiae. Lorem ipsum, do
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit neque, facilis illo quisquam assumenda voluptates architecto exercitationem molestias ipsam nihil adipisci sapiente magni inventore ipsum ab quibusdam nobis praesentium doloribus.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus eum quaerat, libero, alias, nulla praesentium blanditiis amet molestiae ullam saepe maxime possimus perferendis labore recusandae vero necessitatibus quae? Ab, veniam.
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet quidem, eius pariatur praesentium similique minima dolores hic? Rerum ea est dolores, tempora minima non temporibus velit. Quos error voluptatem laudantium.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit neque, facilis illo quisquam
+                        assumenda voluptates architecto exercitationem molestias ipsam nihil adipisci sapiente magni
+                        inventore ipsum ab quibusdam nobis praesentium doloribus.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus eum quaerat, libero, alias,
+                        nulla praesentium blanditiis amet molestiae ullam saepe maxime possimus perferendis labore
+                        recusandae vero necessitatibus quae? Ab, veniam.
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet quidem, eius pariatur
+                        praesentium similique minima dolores hic? Rerum ea est dolores, tempora minima non temporibus
+                        velit. Quos error voluptatem laudantium.
                         lotr
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem, obcaecati dolorum. Nihil, itaque aliquid. Aperiam neque a tempora nesciunt perspiciatis doloribus adipisci laborum cumque quae! Odit facere earum rerum iste.
-                       
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem, obcaecati dolorum. Nihil,
+                        itaque aliquid. Aperiam neque a tempora nesciunt perspiciatis doloribus adipisci laborum cumque
+                        quae! Odit facere earum rerum iste.
+
                     </p>
                     <div class="btn-responder">
-                        <button type="submit">
+                        <button onclick="abrirModal()" type="submit">
                             Excluir
                         </button>
                     </div>
@@ -102,7 +112,7 @@
                         porro sunt doloribus repudiandae quasi quis fugit est cupiditate optio iure laudantium? Nihil?
                     </p>
                     <div class="btn-responder">
-                        <button type="submit">
+                        <button onclick="abrirModal()" type="submit">
                             Excluir
                         </button>
                     </div>
@@ -112,7 +122,24 @@
         </div>
     </main>
 
+    <div class="container-modal" id="modal">
+        <div class="posicionar-modal">
+            <div class="modal">
+                 <img src="imgs/aviso.png" alt="">
+                 <h2>Você tem certeza que deseja excluir <br> 
+                    essa mensagem?
+                </h2>
+            </div>
 
+            <div class="btn-adm">
+                <button onclick="fecharAviso()" id="cancelar" type="submit">Canelar</button>
+                <button type="submit">Excluir</button>
+            </div>
+        </div>
+
+    </div>
+
+    <script src="script.js"></script>
 
 </body>
 
