--- a/Pages/TelaMedico/index.html
+++ b/Pages/TelaMedico/index.html
@@ -40,8 +40,8 @@
                         ut reprehenderit non dolore voluptate hic ex quisquam nisi quis, id consectetur incidunt quos
                         blanditiis expedita molestiae.
                     </p>
-                    <div class="btn-responder">
-                        <button type="submit">
+                    <div class="btn-style">
+                        <button onclick="abrirModal()" type="submit">
                             Responder
                         </button>
                     </div>
@@ -69,8 +69,8 @@
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem, obcaecati dolorum. Nihil, itaque aliquid. Aperiam neque a tempora nesciunt perspiciatis doloribus adipisci laborum cumque quae! Odit facere earum rerum iste.
                        
                     </p>
-                    <div class="btn-responder">
-                        <button type="submit">
+                    <div class="btn-style">
+                        <button onclick="abrirModal()" type="submit">
                             Responder
                         </button>
                     </div>
@@ -101,19 +101,51 @@
                         amet consectetur adipisicing elit. Dicta, provident quidem et alias ea aut necessitatibus ullam
                         porro sunt doloribus repudiandae quasi quis fugit est cupiditate optio iure laudantium? Nihil?
                     </p>
-                    <div class="btn-responder">
-                        <button type="submit">
+                    <div class="btn-style">
+                        <button onclick="abrirModal()" type="submit">
                             Responder
                         </button>
                     </div>
                 </div>
             </div>
-
         </div>
     </main>
 
+    <div class="container-modal" id="modal">
+        <div class="posicionar-modal">
+
+            <p>Respondendo a:</p>
+            <div class="modal">
+                
+                <div class="modal-top">
+                    <div class="commit-left">
+                        <img class="imgPerfil" src="imgs/imgPerfil.svg" alt="">
+                        <div>
+                            <img src="imgs/like.png" alt="">
+                            <img src="imgs/dislike.png" alt="">
+                        </div>
+                    </div>
+                    <div class="commit-right">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos sequi dolores deleniti hic nihil fugit at quaerat, maiores sunt inventore sint molestias eligendi harum, quibusdam eveniet tenetur obcaecati beatae. Culpa?
+                    </div>
+                </div>
+
+                <div class="modal-bottom">
+                    <textarea name="" id=""></textarea>
+                </div>
+            </div>
+
+            <div class="btn-style">
+                <button onclick="fecharModal()" id="fechar" class="fechar" type="submit">Fechar</button>
+
+                <button type="submit">Enviar</button>
+            </div>
+        </div>
+
+    </div>
 
 
+    <script src="script.js"></script>
 </body>
 
 </html>
