--- a/Pages/TelaLogin/index.html
+++ b/Pages/TelaLogin/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aedes Chat</title>
     <link rel="stylesheet" href="style.css">
+    <script src="./login.js"></script>
 </head>
 <body>
     <main>
@@ -13,7 +14,7 @@
             <img src="imgs/doctors.png" alt="">
         </div>
 
-        <div class="main-right">
+        <form class="main-right" onsubmit="return login(event)">
             <p class="bem-vindo">Bem vindo ao Aedes Chat!</p>
 
             <div class="input">
@@ -26,10 +27,11 @@
                 <input type="password" name="" id="senha">
             </div>
 
+            <p id="credencial-invalida">email ou senha invalida</p>
             <p class="esqueceu-Senha">Esqueceu a senha?</p>
 
             <button type="submit">Entrar</button>
-        </div>
+        </form>
 
         <img class="wave" src="imgs/wave.png" alt="">
     </main>
