integração da tela de login com o back

--- a/Pages/TelaLogin/index.html
+++ b/Pages/TelaLogin/index.html
@@ -27,10 +27,10 @@
                 <input type="password" name="" id="senha">
             </div>
 
-            <p id="credencial-invalida">email ou senha invalida</p>
+            <p id="credencial-invalida">E-mail ou senha incorretos</p>
             <p class="esqueceu-Senha">Esqueceu a senha?</p>
 
-            <button type="submit">Entrar</button>
+            <button type="submit" id="botao-login">Entrar</button>
         </form>
 
         <img class="wave" src="imgs/wave.png" alt="">
