--- a/Pages/TelaADM/index.html
+++ b/Pages/TelaADM/index.html
@@ -132,7 +132,7 @@
             </div>
 
             <div class="btn-adm">
-                <button onclick="fecharAviso()" id="cancelar" type="submit">Canelar</button>
+                <button onclick="fecharAviso()" id="cancelar" type="submit">Cancelar</button>
                 <button type="submit">Excluir</button>
             </div>
         </div>
@@ -140,7 +140,6 @@
     </div>
 
     <script src="script.js"></script>
-
 </body>
 
 </html>
