--- a/Pages/Comentarios/index.html
+++ b/Pages/Comentarios/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aedes Chat</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
-
     <nav>
         <ul>
             <a href="../TelaIncial/index.html"> <li>Início</li> </a>
@@ -23,7 +23,7 @@
     </nav>
 
     <main>
-        <div class="container">
+        <div class="container", id="container-posts">
 
             <div class="commit">
                 <div class="commit-left">
