inicio da integração da tela de médico

--- a/Pages/TelaMedico/index.html
+++ b/Pages/TelaMedico/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-
     <nav>
         <ul>
             <a href="../TelaIncial/index.html"> <li>Início</li> </a>
@@ -125,7 +124,7 @@
                             <img src="imgs/dislike.png" alt="">
                         </div>
                     </div>
-                    <div class="commit-right">
+                    <div class="commit-right" id="comment-content">
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos sequi dolores deleniti hic nihil fugit at quaerat, maiores sunt inventore sint molestias eligendi harum, quibusdam eveniet tenetur obcaecati beatae. Culpa?
                     </div>
                 </div>
