--- a/Pages/TelaMedico/index.html
+++ b/Pages/TelaMedico/index.html
@@ -11,12 +11,12 @@
 <body>
     <nav>
         <ul>
-            <a href="../TelaIncial/index.html"> <li>Início</li> </a>
+            <a href="/TelaIncial/index.html"> <li>Início</li> </a>
             <li>Fórum</li>
             <li>Informações</li>
         </ul>
 
-        <a href="../TelaLogin/index.html">
+        <a href="/TelaLogin/index.html">
             <a id="user-name"></a>
             <img src="imgs/imgPerfil.png" alt="">
         </a>
