consertar pequenos erros

--- a/Pages/TelaMedico/index.html
+++ b/Pages/TelaMedico/index.html
@@ -24,97 +24,13 @@
 
     <main>
         <div class="container", id="container-posts">
-
-            <div class="commit">
-                <div class="commit-left">
-                    <img class="imgPerfil" src="imgs/imgPerfil.svg" alt="">
-                    <div>
-                        <img src="imgs/like.png" alt="">
-                        <img src="imgs/dislike.png" alt="">
-                    </div>
-                </div>
-
-                <div class="commit-right">
-                    <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi voluptatem harum dolorem sit
-                        ut reprehenderit non dolore voluptate hic ex quisquam nisi quis, id consectetur incidunt quos
-                        blanditiis expedita molestiae.
-                    </p>
-                    <div class="btn-style">
-                        <button onclick="abrirModal()" type="submit">
-                            Responder
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="commit">
-                <div class="commit-left">
-                    <img class="imgPerfil" src="imgs/imgPerfil.svg" alt="">
-                    <div>
-                        <img src="imgs/like.png" alt="">
-                        <img src="imgs/dislike.png" alt="">
-                    </div>
-                </div>
-
-                <div class="commit-right">
-                    <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi voluptatem harum dolorem sit
-                        ut reprehenderit non dolore voluptate hic ex quisquam nisi quis, id consectetur incidunt quos
-                        blanditiis expedita molestiae. Lorem ipsum, do
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit neque, facilis illo quisquam assumenda voluptates architecto exercitationem molestias ipsam nihil adipisci sapiente magni inventore ipsum ab quibusdam nobis praesentium doloribus.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus eum quaerat, libero, alias, nulla praesentium blanditiis amet molestiae ullam saepe maxime possimus perferendis labore recusandae vero necessitatibus quae? Ab, veniam.
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet quidem, eius pariatur praesentium similique minima dolores hic? Rerum ea est dolores, tempora minima non temporibus velit. Quos error voluptatem laudantium.
-                        lotr
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem, obcaecati dolorum. Nihil, itaque aliquid. Aperiam neque a tempora nesciunt perspiciatis doloribus adipisci laborum cumque quae! Odit facere earum rerum iste.
-                       
-                    </p>
-                    <div class="btn-style">
-                        <button onclick="abrirModal()" type="submit">
-                            Responder
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="commit">
-                <div class="commit-left">
-                    <img class="imgPerfil" src="imgs/imgPerfil.svg" alt="">
-                    <div>
-                        <img src="imgs/like.png" alt="">
-                        <img src="imgs/dislike.png" alt="">
-                    </div>
-                </div>
-
-                <div class="commit-right">
-                    <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi voluptatem harum dolorem sit
-                        ut reprehenderit non dolore voluptate hic ex quisquam nisi quis, id consectetur incidunt quos
-                        blanditiis expedita molestiae. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                        Possimus ut provident illo, assumenda ipsa rerum repudiandae vero natus optio repellendus
-                        exercitationem fuga cumque iusto nulla magni, vitae tempora cupiditate sunt? Lorem ipsum dolor,
-                        sit amet consectetur adipisicing elit. Ad adipisci culpa saepe ipsa eos officiis neque delectus
-                        natus harum repudiandae, optio vel nisi consequatur? Voluptatum neque exercitationem voluptate
-                        eos ut!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, quam quasi
-                        libero molestiae, sequi quibusdam ab perferendis ducimus doloribus dignissimos, veniam fuga
-                        repellat? Optio assumenda excepturi debitis culpa voluptate quisquam. Lorem, ipsum dolor sit
-                        amet consectetur adipisicing elit. Dicta, provident quidem et alias ea aut necessitatibus ullam
-                        porro sunt doloribus repudiandae quasi quis fugit est cupiditate optio iure laudantium? Nihil?
-                    </p>
-                    <div class="btn-style">
-                        <button onclick="abrirModal()" type="submit">
-                            Responder
-                        </button>
-                    </div>
-                </div>
-            </div>
         </div>
     </main>
 
     <div class="container-modal" id="modal">
         <div class="posicionar-modal">
 
-            <p>Respondendo a:</p>
+            <p>Respondendo:</p>
             <div class="modal">
                 
                 <div class="modal-top">
@@ -126,7 +42,6 @@
                         </div>
                     </div>
                     <div class="commit-right" id="comment-content">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos sequi dolores deleniti hic nihil fugit at quaerat, maiores sunt inventore sint molestias eligendi harum, quibusdam eveniet tenetur obcaecati beatae. Culpa?
                     </div>
                 </div>
 
